Fixed some user state stuff and improved LineGraph on mobile (now scrolls)

--- a/src/components/pages/Stats/stats.module.css
+++ b/src/components/pages/Stats/stats.module.css
@@ -4,4 +4,6 @@
     justify-content: center;
 
     margin-top: 2rem;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
